# large-translate

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: README.md  batch-translation.md  on-demand-translation.md
src/large_translate/: __init__.py  batch_engine.py  batch_sentiment_engine.py  checkpoint.py  chunking.py  cli.py  config.py  engine.py  prompts.py  sentence_splitter.py  sentiment_engine.py  sentiment_prompts.py
src/large_translate/models/: __init__.py  anthropic.py  base.py  google.py  openai.py
src/large_translate/parsers/: __init__.py  base.py  docx.py  markdown.py  txt.py
