[project]
name = "large-translate"
version = "0.1.0"
description = "CLI tool for chunking and translating large files using LLM APIs"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12.0",
    "rich>=13.7.0",
    "openai>=1.40.0",
    "anthropic>=0.34.0",
    "google-genai>=1.0.0",
    "python-docx>=1.1.0",
    "tenacity>=8.5.0",
    "python-dotenv>=1.0.0",
    "tiktoken>=0.7.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
]

[project.scripts]
translate = "large_translate.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/large_translate"]
